# Boids

./: .gitignore  README.md  main.py  main.py.backup  pyproject.toml  test.py
src/rosella/: __init__.py  cli.py  simulation.py
